# apple-a-day

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SKILL.md  com.eidos.apple-a-day-app.plist  com.eidos.apple-a-day.plist  pyproject.toml
.brutal-forge/: history.jsonl  last-report.md
.docket/: docket.json
.docket/completed/: TASK-0003 - add-runtime-schema-introspection-aad-schema.md  TASK-0007 - security-check-module.md  TASK-0010 - create-homebrew-tap.md
.docket/milestones/: MS-0002 - v0-3-new-check-modules-pypi.md  (+1 more)
.forge/: manifest.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.ike/: ike.json
.research/: research.json
.visionlog/: config.yaml  vision.md
apple_a_day/: __init__.py  app_similarity.py  browser.py  cli.py  context.py  ensemble_similarity.py  feature_extraction.py  format_ansi.py  format_rich.py  knowledge.py  launchd.py  log.py  models.py  profile.py  replacement_detection.py  report.py  report_html.py  runner.py  schema.py  vitals.py
browser/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
demo/: demo-script.sh  demo.cast  demo.tape
findings/: 0001-oss-system-monitors-worth-studying.md  0002-native-macos-diagnostics-to-orchestrate-not-reimplement.md  0003-disk-storage-and-backup-tools.md  0004-cpu-gpu-thermal-and-power-monitoring.md  0005-network-and-connectivity-diagnostics.md  0006-security-and-integrity-checks.md  0007-community-recipe-collections-and-guide-patterns.md
ship/: README.md
tests/: test_checks.py  test_cli.py  test_log.py  test_models.py  test_vitals.py
(+388 files in other folders)
